--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
   <main>
     <section id="quote-section" class="quote-section">
       <blockquote>
-        <p id="quote-id" hidden></p>
-        <p id="quote-section__quote" class="quote-section__quote"></p>
-        <footer><span id="quote-section__name" class="quote-section__name"></span> <span id="quote-section__profession" class="quote-section__profession"></span></footer>
+        <p id="quote-id" hidden>0001</p>
+        <p id="quote-section__quote" class="quote-section__quote">
+          " I've been interested in coding for a while but never taken the jump, until now. I couldn't recommend this course enough. I'm now in the job of my dreams and so excited about the future. "
+        </p>
+        <footer><span id="quote-section__name" class="quote-section__name">Tanya Sinclair</span> <span id="quote-section__profession" class="quote-section__profession">UX Engineer</span></footer>
       </blockquote>
       <div class="quote-section__picture">
         <div class="image-buttons-div">
-          <img id="quote-section_img" src="" alt="quote author picture" aria-hidden="true">
+          <img id="quote-section_img" src="images/image-tanya.jpg" alt="quote author picture" aria-hidden="true">
           <div id="nav_buttons" class="nav_buttons">
             <button id="quote-section__prev-button" class="quote-section__prev-button" aria-label="show previus quote"></button>
             <button id="quote-section__next-button" class="quote-section__next-button" aria-label="show next quote"></button>
