Adding sr-only testimony

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main>
     <section id="quote-section" class="quote-section">
       <blockquote>
-        <p id="quote-id" hidden>0001</p>
+        <p class="sr-only">Testimony <span id="quote-position">1</span></p>
         <p id="quote-section__quote" class="quote-section__quote">
           " I've been interested in coding for a while but never taken the jump, until now. I couldn't recommend this course enough. I'm now in the job of my dreams and so excited about the future. "
         </p>
@@ -26,10 +26,10 @@
       </blockquote>
       <div class="quote-section__picture">
         <div class="image-buttons-div">
-          <img id="quote-section_img" src="images/image-tanya.jpg" alt="quote author picture" aria-hidden="true">
+          <img id="quote-section__img" src="images/image-tanya.jpg" alt="quote author picture" aria-hidden="true">
           <div id="nav_buttons" class="nav_buttons">
-            <button id="quote-section__prev-button" class="quote-section__prev-button" aria-label="show previus quote"></button>
-            <button id="quote-section__next-button" class="quote-section__next-button" aria-label="show next quote"></button>
+            <button id="quote-section__prev-button" class="quote-section__prev-button" aria-label="show previus testimony"></button>
+            <button id="quote-section__next-button" class="quote-section__next-button" aria-label="show next testimoy"></button>
           </div>
         </div>
       </div>    
